<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Settings_page">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/userimg"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="Name"
               android:textSize="22sp"
               android:textStyle="bold"
               android:textColor="@color/black"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6307989898"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>


        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:backgroundTint="@color/button"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            app:cardCornerRadius="5dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginStart="30dp"
                android:text="@string/Profile"
                android:textSize="22sp"
                android:textColor="@color/lightGreen"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:cardCornerRadius="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginEnd="10dp">


            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/user_black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/editprofile"
                android:text="@string/EditProfile"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"/>




        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginEnd="10dp">


            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/translate_black"/>
            <TextView
                android:layout_width="match_parent"
                android:id="@+id/langauge"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/Langauge"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            app:cardCornerRadius="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginEnd="10dp">


            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/siren"/>
            <TextView
                android:layout_width="match_parent"
                android:id="@+id/sosEmergency"
                android:layout_height="match_parent"
                android:text="@string/SOS"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"/>




        </LinearLayout>




        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:backgroundTint="@color/button"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            app:cardCornerRadius="5dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginStart="30dp"
                android:text="@string/Help"
                android:textSize="22sp"
                android:textColor="@color/lightGreen"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:id="@+id/contactus"
                android:orientation="horizontal"
                android:layout_marginEnd="10dp">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/contact_us"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Contactus"
                    android:textSize="18sp"
                    android:layout_marginLeft="10dp"/>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:id="@+id/aboutus"
                android:layout_marginEnd="10dp">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/aboutus"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Aboutus"
                    android:textSize="18sp"
                    android:layout_marginLeft="10dp"/>


            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/faq"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_marginEnd="10dp">


                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/faq"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/Faq"
                        android:gravity="center_vertical"
                        android:textSize="18sp"
                        android:layout_marginLeft="10dp"/>


                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginEnd="10dp">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/feedback"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Feedback"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    android:id="@+id/feedback"
                    android:layout_marginLeft="10dp"/>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginEnd="10dp">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/share"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Shareapp"
                    android:id="@+id/shareapp"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    android:layout_marginLeft="10dp"/>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginEnd="10dp">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/logout_black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Logout"
                    android:id="@+id/logout"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    android:layout_marginLeft="10dp"/>


            </LinearLayout>


        </LinearLayout>



    </LinearLayout>



</ScrollView>