<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".choose_disaster_type">


        <!-- Top CardView -->
        <androidx.cardview.widget.CardView
            android:id="@+id/statusbar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:backgroundTint="@color/button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="15dp"
                        android:src="@drawable/locimage" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rescue"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        android:layout_marginStart="30dp"
                        android:textColor="@color/lightGreen" />

                    <TextView
                        android:id="@+id/tv2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Radar"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/orange"
                        android:textSize="32sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:layout_marginEnd="15dp"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/changeLangauge"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/language" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/statusbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/choose_disaster">


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Flood"
                android:padding="5dp"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Fire"
                android:padding="5dp"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Earthquack"
                android:padding="5dp"
                android:textSize="18sp"
                android:textColor="@color/black"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/Storm"
                android:textSize="18sp"
                android:textColor="@color/black"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/tsunami"
                android:textSize="18sp"
                android:textColor="@color/black"/>


        </RadioGroup>


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="140dp"
           android:gravity="center"
           android:orientation="vertical">

           <Button
               android:layout_width="130dp"
               android:layout_height="55dp"
               android:text="PROCEED"
               android:elevation="10dp"
               android:id="@+id/Proceed"
               android:backgroundTint="@color/redshade"/>


       </LinearLayout>

    </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

